--- a/index.html
+++ b/index.html
@@ -3,3 +3,9 @@
 <p>alamat: Potorono, Banguntapan, Bantul</p> <br>
 <p>kelas: 12 SIJA A</p> <br>
 <p>cita - cita: menjadi orang yang bermanfaat</p>
+
+marcellinus christo pradipta 
+35
+Getas Kalongan, Tlogoadi, Mlati, Sleman
+12 SIJAA
+Orang sukses
